# crucible

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  todo.md
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  dogfooding-log.md  recording-a-demo.md
docs/plans/: 2026-07-02-reviewer-personas-redesign.md
docs/skills/: advance.md  reviewer-round.md  start.md  status.md  understand.md
docs/specs/: 2026-07-02-reviewer-personas-redesign.md
mcp-server/src/crucible/: landscape.py  venue_profiles.py
mcp-server/tests/: test_landscape.py  test_store.py
plugins/crucible-rdd/: README.md
plugins/crucible-rdd/.claude-plugin/: plugin.json
plugins/crucible-rdd/mcp-server/: pyproject.toml
plugins/crucible-rdd/mcp-server/src/crucible/: landscape.py  models.py  reviewer_personas.py  server.py  store.py  venue_profiles.py
plugins/crucible-rdd/mcp-server/tests/: test_landscape.py  test_models.py  test_personas.py  test_server.py  test_store.py
plugins/crucible-rdd/skills/: crucible-advance.md  crucible-reviewer-round.md  crucible-start.md  crucible-status.md  crucible-understand.md
plugins/crucible-rdd/skills/crucible-advance/: SKILL.md
plugins/crucible-rdd/skills/crucible-reviewer-round/: SKILL.md
plugins/crucible-rdd/skills/crucible-start/: SKILL.md
plugins/crucible-rdd/skills/crucible-status/: SKILL.md
plugins/crucible-rdd/skills/crucible-understand/: SKILL.md
scripts/: bump-version.sh
skills/: crucible-start.md
